--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,33 @@
+body {
+  background-color: #282c34;
+  color: white;
+}
+
+.social-tile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.social-tile {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.social-section {
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
+  margin: 0 auto;
+}
+
+.social-icon {
+  width: 30px;
+  margin: 0px 5px;
+  background-color: transparent;
+}
+
 .App {
   text-align: center;
 }
@@ -14,8 +44,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
